--- a/data_preprocessing/fault_diagnosis/Data_preprocessing.ipynb
+++ b/data_preprocessing/fault_diagnosis/Data_preprocessing.ipynb
@@ -116,8 +116,6 @@
    "source": [
     "import torch \n",
     "import numpy as np \n",
-    "import pandas as pd \n",
-    "import scipy.io as scp\n",
     "import mat4py as sp\n",
     "from sklearn.model_selection import train_test_split\n",
     "import os "
@@ -136,11 +134,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_path = 'data_files'\n",
+    "output_dir = '../../data/pFD'\n",
     "# Loading data \n",
-    "data_a = sp.loadmat(r'E:\\My Papers\\AMDA_TIM\\data\\raw_data\\KAt dataset\\data\\A_5120L.mat')\n",
-    "data_b = sp.loadmat(r'E:\\My Papers\\AMDA_TIM\\data\\raw_data\\KAt dataset\\data\\B_5120L.mat')\n",
-    "data_c = sp.loadmat(r'E:\\My Papers\\AMDA_TIM\\data\\raw_data\\KAt dataset\\data\\C_5120L.mat')\n",
-    "data_d = sp.loadmat(r'E:\\My Papers\\AMDA_TIM\\data\\raw_data\\KAt dataset\\data\\D_5120L.mat')"
+    "data_a = sp.loadmat(os.path.join(data_path, 'A_5120L.mat'))\n",
+    "data_b = sp.loadmat(os.path.join(data_path, 'B_5120L.mat'))\n",
+    "data_c = sp.loadmat(os.path.join(data_path, 'C_5120L.mat'))\n",
+    "data_d = sp.loadmat(os.path.join(data_path, 'D_5120L.mat'))"
    ]
   },
   {
@@ -260,9 +260,9 @@
     "\n",
     "# datasaving\n",
     "for data_idx in ['a', 'b', 'c', 'd']:\n",
-    "    torch.save(full_data_kat[data_idx]['train'], os.path.join(r'D:\\All Fault Diagnosis datasets\\Paderbron_data' ,f'train_{data_idx}.pt'))\n",
-    "    torch.save(full_data_kat[data_idx]['val'],  os.path.join(r'D:\\All Fault Diagnosis datasets\\Paderbron_data' , f'val_{data_idx}.pt' ))\n",
-    "    torch.save(full_data_kat[data_idx]['test'] , os.path.join(r'D:\\All Fault Diagnosis datasets\\Paderbron_data' , f'test_{data_idx}.pt'))\n"
+    "    torch.save(full_data_kat[data_idx]['train'], os.path.join(output_dir ,f'train_{data_idx}.pt'))\n",
+    "    torch.save(full_data_kat[data_idx]['val'],  os.path.join(output_dir , f'val_{data_idx}.pt' ))\n",
+    "    torch.save(full_data_kat[data_idx]['test'] , os.path.join(output_dir , f'test_{data_idx}.pt'))\n"
    ]
   }
  ],
